# snippets

./: LICENSE  clearcache.py  pyproject.toml
tests/: test_itertools.py  test_toolz.py
